3. Show user defined roles in track info.
4. Change genre icon.
5. Different highlight for matching artists as opposed to search in list.
6. Tidy up artist title strings if navigating through multiple roles.
7. If browsing non basic artist roles then show role name before years in
   subtoolbar when listing an artist's albums.
8. 'Pulse' play button if waiting-to-play.

5.3.2
-----
1. Only show play/add button text if showing detailed sub-toolbar.
2. Don't add HTML formatting to audio, or other clickable, entries.
3. Fix listing album tracks under My Music / Works / Composer / COMPOSER /
   WORK / ALBUM
4. Fix background colour of 'Update information' screen.
5. Fix showing all tracks of a multi-artist album if navigating from an
   artist, and Material is configured to show all.
6. Use no-artist filter always, if set.
7. Fix tinted background when not using colour from cover.
8. Reduce opacity of current artist highlight in track list.

5.3.1
-----
1. Delay drag-n-drop, via Polyfill, for 1/4 of a second so that it does not
   interfere with scrolling.
2. Improve drag scrolling.

5.3.0
-----
 1. When navigating into an album, artist, work, or playlist from favourites
    attempt to obtain DB IDs and navigate using those.
 2. Remove 'Dark' theme and rename 'Darker' to 'Dark'.
 3. Simplify themes.
 4. Fix showing detailed sub-toolbar on mobile layout.
 5. Only draw blurred background in detailed sub-toolbar if browse view is set
    to draw background images.
 6. Consistent search library icon.
 7. Add option to tint background colour, if supported by browser.
 8. Use detailed sub-toolbar if width is 350px or more.
 9. If using 'colour from cover' and have no track then default to 'Blue'
    colours.
10. If using detailed sub-toolbar then place home button below back button.
11. Use 'My Music' categories as basis of categories to show under Genres and
    Years.
12. If using 'colour from cover' then choose nearest colour from palette for
    highlight colour.