@@ -9,6 +9,8 @@
 7. If browsing non basic artist roles then show role name before years in
    subtoolbar when listing an artist's albums.
 8. 'Pulse' play button if waiting-to-play.
+9. Attempt to prevent flash of original background colour when open page in
+   iframe.
 
 5.3.2
 -----
